# obj_inspect_inator

./: .gitignore  CMakeLists.txt  README.md
res/: compileShaders.sh
res/shaders/: fragment.spv  vertex.spv
res/shaders_code/: fragment.glsl  vertex.glsl
src/: main.cpp  renderer.cpp  renderer.hpp  tiny_obj_loader.h
